tdf#95846: fix not-relative-to-indent tab stop positions

Also minimize rounding errors in tab stop pixel positions.

Change-Id: I929d8ca0cd4fc665ea66bf47a7e3b5e47dc8e7f2